--- a/services.html
+++ b/services.html
@@ -35,39 +35,47 @@
     padding-top: 0.9rem !important;
     padding-bottom: 0.9rem !important;
     color: white !important;
-}
+  }
+
   .ftco-navbar-light.scrolled {
     background-color: black !important;
-}
+  }
+
   /* Apply to all scrollable elements to hide vertical scrollbar line */
-* {
-  scrollbar-width: none; /* Firefox */
-}
+  * {
+    scrollbar-width: none;
+    /* Firefox */
+  }
 
-*::-webkit-scrollbar {
-  width: 0px;             /* Chrome, Safari */
-  background: transparent;
-}
+  *::-webkit-scrollbar {
+    width: 0px;
+    /* Chrome, Safari */
+    background: transparent;
+  }
 
-   .container a img {
-    width: 168px ;
-    height: 72px ;
-}
-    .ftco-navbar-light {
+  .container a img {
+    width: 168px;
+    height: 72px;
+  }
+
+  .ftco-navbar-light {
     background: transparent !important;
     position: absolute;
     top: 0px;
     left: 0;
     right: 0;
     z-index: 3;
-}
-.ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
+  }
+
+  .ftco-navbar-light .navbar-nav>.nav-item>.nav-link {
     font-size: 18px !important;
-}
-.ftco-navbar-light .navbar-nav > .nav-item.active > a {
+  }
+
+  .ftco-navbar-light .navbar-nav>.nav-item.active>a {
     color: white !important;
-}
-.navbar-brand {
+  }
+
+  .navbar-brand {
     display: inline-block;
     padding-top: 0.3125rem;
     padding-bottom: 0.3125rem;
@@ -75,7 +83,8 @@
     font-size: 1.25rem;
     line-height: inherit;
     white-space: nowrap;
-}
+  }
+
   /* General styles for all screens */
   .custom-service-box {
     background: #fff;
@@ -231,57 +240,64 @@
       width: 140px;
       height: 70px;
     }
+
     .ftco-footer .ftco-footer-widget h2 {
-    font-weight: normal;
-    color: #fff;
-    margin-bottom: 0px;
-    font-size: 20px;
-    font-weight: 400;
-}
+      font-weight: normal;
+      color: #fff;
+      margin-bottom: 0px;
+      font-size: 20px;
+      font-weight: 400;
+    }
+
     .custom-service-title {
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 15px;
-    color: #333;
-    text-align: center;
-}
-.custom-service-desc {
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 20px;
-}
-.more-details-btn {
-    display: inline-block;
-    padding: 5px 14px;
-    background-color: #E12C2B;
-    color: #fff;
-    font-weight: 500;
-    text-decoration: none;
-    border-radius: 0;
-    transition: 0.3s ease;
-}
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 15px;
+      color: #333;
+      text-align: center;
+    }
+
+    .custom-service-desc {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 20px;
+    }
+
+    .more-details-btn {
+      display: inline-block;
+      padding: 5px 14px;
+      background-color: #E12C2B;
+      color: #fff;
+      font-weight: 500;
+      text-decoration: none;
+      border-radius: 0;
+      transition: 0.3s ease;
+    }
+
     .hero-wrap h1 {
-    font-size: 2.5rem;
-    font-weight: bold;
-    margin-top: 4rem !important;
-}
-      .ftco-navbar-light {
-    background: black !important;
-    position: absolute;
-    top: 0px;
-    left: 0;
-    right: 0;
-    z-index: 3;
-}
+      font-size: 2.5rem;
+      font-weight: bold;
+      /* margin-top: 4rem !important; */
+    }
+
+    .ftco-navbar-light {
+      background: black !important;
+      position: absolute;
+      top: 0px;
+      left: 0;
+      right: 0;
+      z-index: 3;
+    }
 
     .navbar-brand img {
       width: 140px;
       height: 70px;
     }
+
     .container a img {
-    width: 118px !important;
-    height: 50px !important;
-}
+      width: 118px !important;
+      height: 50px !important;
+    }
 
     .hero-wrap .overlay {
       position: absolute;
@@ -292,7 +308,7 @@
       content: '';
       opacity: .3;
       background: #000000;
-      height: 1px;
+      height: 850px;
     }
 
     #hello {
@@ -379,14 +395,23 @@
       width: 120px;
       height: 60px;
     }
-.block-23 ul {
-    padding: 0;
-    display: flex
-;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+
+    .ftco-footer p {
+      color: rgba(255, 255, 255, 0.7);
+      max-width: 300px;
+      margin: auto;
+      text-align: center;
+      justify-content: center;
+    }
+
+    .block-23 ul {
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
     .hero-wrap .overlay {
       position: absolute;
       top: 0;
@@ -396,7 +421,7 @@
       content: '';
       opacity: .3;
       background: #000000;
-      height: 1px;
+      height: 1000px;
     }
 
     #hello {
@@ -496,7 +521,7 @@
     }
 
     .hero-wrap {
-      height: 350px;
+      height: 450px;
     }
 
     .car-wrap .img {
@@ -512,9 +537,11 @@
       font-size: 20px;
     }
   }
-.ftco-footer .ftco-footer-widget ul li a span {
+
+  .ftco-footer .ftco-footer-widget ul li a span {
     color: darkgrey !important;
-}
+  }
+
   .hero-wrap .overlay {
     position: absolute;
     top: 0;
@@ -524,15 +551,16 @@
     content: '';
     opacity: .3;
     background: #000000;
-    height: 100px;
+    height: 850px;
   }
+
   .ftco-footer .ftco-footer-widget h2 {
     font-weight: normal;
     color: #fff;
     margin-bottom: 5px !important;
     font-size: 20px;
     font-weight: 400;
-}
+  }
 
   #performance {
     display: flex;
@@ -561,7 +589,7 @@
       content: '';
       opacity: .3;
       background: #000000;
-      height: 1px;
+      height: 1000px;
     }
 
     #hello {
@@ -585,6 +613,10 @@
       max-width: 50%;
     }
 
+    #footer-hidden {
+      display: none;
+    }
+
     .hero-wrap .overlay {
       position: absolute;
       top: 0;
@@ -594,7 +626,7 @@
       content: '';
       opacity: .3;
       background: #000000;
-      height: 1px;
+      height: 1000px;
     }
 
     #hello {
@@ -603,44 +635,182 @@
   }
 
   .container a img {
-    width:168px;
+    width: 168px;
     height: 72px;
   }
+
   #about .nav-link {
-  color: #C8102E !important;
-}
+    color: #C8102E !important;
+  }
+
+  .header-container {
+    max-width: 900px;
+    width: 100%;
+    text-align: center;
+    margin: auto;
+  }
+
+  .main-header {
+    padding: 40px 30px;
+    margin-bottom: 20px;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .main-text {
+    font-size: 2.2rem;
+    font-weight: bold;
+    background: linear-gradient(135deg, #003B75, #C8102E, white);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    line-height: 1.4;
+    margin-bottom: 0;
+    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.7));
+  }
+
+
+  .highlight-section {
+    /* background: linear-gradient(135deg, #C8102E, #e63946); */
+    color: white !important;
+    padding: 25px 40px;
+    border-radius: 15px;
+    /* box-shadow: 0 15px 30px rgba(200, 16, 46, 0.3); */
+    transform: translateY(-10px);
+    position: relative;
+    overflow: hidden;
+  }
+
+  .highlight-section::before {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.1) 0%, transparent 70%);
+    animation: shimmer 3s infinite;
+  }
+
+  .highlight-text {
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin: 0;
+    position: relative;
+    z-index: 1;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    color: white;
+  }
+
+  .accent-dot {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    background: #C8102E;
+    border-radius: 50%;
+    margin: 0 8px;
+    animation: pulse 2s infinite;
+  }
+
+  @keyframes shimmer {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes pulse {
+
+    0%,
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+
+    50% {
+      opacity: 0.7;
+      transform: scale(1.2);
+    }
+  }
+
+  @media (max-width: 768px) {
+    .main-text {
+      font-size: 1.6rem;
+    }
+
+    .highlight-text {
+      font-size: 1.4rem;
+    }
+
+    .main-header {
+      padding: 10px 20px;
+    }
+
+    .highlight-section {
+      padding: 20px 25px;
+    }
+
+    .header-container {
+      max-width: 900px;
+      width: 100%;
+      text-align: center;
+      margin-top: 20px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .main-text {
+      font-size: 1.3rem;
+    }
+
+    .highlight-text {
+      font-size: 1.2rem;
+    }
+  }
 </style>
 
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span style="color: #C8102E;" class="oi oi-menu"></span> 
-	      </button>
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span style="color: #C8102E;" class="oi oi-menu"></span>
+      </button>
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item" id="about"><a href="services.html" class="nav-link">Services</a></li>
-	          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
+      <div class="collapse navbar-collapse" id="ftco-nav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item" id="about"><a href="services.html" class="nav-link">Services</a></li>
+          <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
 	          <li class="nav-item"><a href="car.html" class="nav-link">Cars</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <!-- END nav -->
   <div class="hero-wrap" style="background-image: url(images/about.jpg);" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
-    <h1 class="mb-4">
-      <span class="green-text">We Provide reliable</span>
-      <span class="white-text"> private hire</span>
-      <span class="white-text"> <br>vehicles in the North West.</span>
-    </h1>
+    <div class="header-container">
+      <div class="main-header">
+        <h1 class="main-text">
+          We provide private hire and non plated vehicles in the north west
+        </h1>
+      </div>
+
+      <div class="highlight-section">
+        <h2 class="highlight-text">
+          ✨ We also offer parcel delivery country wide ✨
+        </h2>
+      </div>
+    </div>
     <!-- <p class="hero-text">We Provide reliable private hire vehicles in the North West.</p> -->
 
   </div>
@@ -667,7 +837,7 @@
             </div>
             <h3 class="custom-service-title">Premium Car Rental Solutions</h3>
             <p class="custom-service-desc">
-              Cheshire Tracks LTD offers top-tier car rental services with a wide selection of well-maintained vehicles
+              SK TRACKS LTD offers top-tier car rental services with a wide selection of well-maintained vehicles
               to suit every travel need. Whether you require short-term or long-term rentals, our professional team
               ensures a seamless process from booking to delivery. We take pride in punctuality, competitive pricing,
               and customer satisfaction, making your journey smooth and enjoyable.
@@ -686,7 +856,7 @@
             </div>
             <h3 class="custom-service-title">Reliable Parcel Delivery</h3>
             <p class="custom-service-desc">
-              Cheshire Tracks LTD offers dependable parcel delivery services tailored to meet your individual and
+              SK TRACKS LTD offers dependable parcel delivery services tailored to meet your individual and
               business needs. Whether it's urgent same-day deliveries or scheduled logistics support, we provide secure,
               timely, and trackable parcel solutions. With our professional drivers and modern fleet, your packages are
               in safe hands from pickup to drop-off. Count on us for efficient, reliable delivery services every time.
@@ -748,52 +918,101 @@
       </div>
     </div>
   </section>
-   <footer class="ftco-footer ftco-bg-dark ftco-section" style="padding: 40px 0px;">
-      <div class="container">
-        <div class="row mb-0">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="margin-bottom: 20px;" alt=""></a>
-              <p>Providing PRIVATE HIRE CABS in Manchester.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-0">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                <li class="ftco-animate"><a href="https://wa.me/03150030730" target="_blank"><span class="icon-whatsapp"></span></a></li> <!-- WhatsApp Icon Added -->
-              </ul>
-            </div>
+  <footer class="ftco-footer ftco-bg-dark ftco-section" style="padding: 40px 0px;">
+    <div class="container">
+      <div class="row mb-0">
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" style="margin-bottom: 20px;"
+                alt=""></a>
+            <p>Providing PRIVATE HIRE CABS in Manchester.</p>
+            <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-0">
+              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+              <li class="ftco-animate whatsapp-button">
+                <a href="https://wa.me/00447400939003" target="_blank">
+                  <span class="icon-whatsapp"></span>
+                </a>
+              </li>
+            </ul>
           </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-0 ml-md-5">
-              <h2 class="ftco-heading-2">Information</h2>
-              <ul class="list-unstyled">
-                                <li><a href="index.html" class="py-2 d-block">Home</a></li>
+        </div>
+        <div class="col-md" id="footer-hidden">
+          <div class="ftco-footer-widget mb-0 ml-md-5">
+            <h2 class="ftco-heading-2">Information</h2>
+            <ul class="list-unstyled">
+              <li><a href="index.html" class="py-2 d-block">Home</a></li>
 
-                <li><a href="about.html" class="py-2 d-block">About</a></li>
-                <li><a href="services.html" class="py-2 d-block">Services</a></li>
-                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
-                <!-- <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
+              <li><a href="about.html" class="py-2 d-block">About</a></li>
+              <li><a href="services.html" class="py-2 d-block">Services</a></li>
+              <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+              <!-- <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
                 <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li> -->
-              </ul>
-            </div>
+            </ul>
           </div>
-          
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2" style="margin-bottom: 20px !important;">Have a Questions?</h2>
-              <div class="block-23 mb-3">
-                <ul>
-                  <li><span class="icon icon-map-marker" style="color: darkgray;"></span><span class="text" style="color: darkgray;">Altrincham</span></li>
-                  <li><a href="#"><span class="icon icon-phone"></span><div style="display: flex; flex-direction: column;"><span class="text">+07400939003</span> <span class="text">+07460441529</span></div></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">demo@outlook.com</span></a></li>
-                </ul>
-              </div>
+        </div>
+
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <h2 class="ftco-heading-2" style="margin-bottom: 20px !important;">Have a Questions?</h2>
+            <div class="block-23 mb-3">
+              <ul>
+                <li><span class="icon icon-map-marker" style="color: darkgray;"></span><span class="text"
+                    style="color: darkgray;">10 kensington street Mosside Manchester M144JP</span></li>
+               <li><a href="#"><span class="icon icon-phone"></span>
+                    <div style="display: flex; flex-direction: column;"><span class="text">00447400939003</span></div>
+                  </a></li>
+                <li><a href="#"><span class="icon icon-envelope"></span><div style="display: flex; flex-direction: column"><span class="text">sktracks13@gmail.com</span><span class="text">sktracks13@gmail.com</span></div></a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-       
       </div>
-    </footer>
+
+    </div>
+  </footer>
+
+  <style>
+    .whatsapp-button a {
+      background-color: #25D366;
+      /* WhatsApp green */
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      animation: pulse-whatsapp 1.8s infinite ease-in-out;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      text-decoration: none;
+    }
+
+    /* Optional: make the icon itself slightly larger */
+    .whatsapp-button .icon-whatsapp {
+      font-size: 24px;
+    }
+
+    /* Pulse Animation */
+    @keyframes pulse-whatsapp {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
+      }
+
+      50% {
+        transform: scale(1.1);
+        box-shadow: 0 0 0 10px rgba(37, 211, 102, 0);
+      }
+
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
+      }
+    }
+  </style>
 
 
 
