--- a/about.html
+++ b/about.html
@@ -859,7 +859,7 @@
                   </a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span>
                     <div style="display: flex; flex-direction: column"><span
-                        class="text">sktracks13@gmail.com</span><span class="text">sktracks13@gmail.com</span></div>
+                        class="text">sktracks13@gmail.com</span><span class="text">sktracks13@yahoo.com</span></div>
                   </a>
               </ul>
             </div>
