--- a/services.html
+++ b/services.html
@@ -963,7 +963,7 @@
                <li><a href="#"><span class="icon icon-phone"></span>
                     <div style="display: flex; flex-direction: column;"><span class="text">00447400939003</span></div>
                   </a></li>
-                <li><a href="#"><span class="icon icon-envelope"></span><div style="display: flex; flex-direction: column"><span class="text">sktracks13@gmail.com</span><span class="text">sktracks13@gmail.com</span></div></a>
+                <li><a href="#"><span class="icon icon-envelope"></span><div style="display: flex; flex-direction: column"><span class="text">sktracks13@gmail.com</span><span class="text">sktracks13@yahoo.com</span></div></a>
                 </li>
               </ul>
             </div>
