--- a/index.html
+++ b/index.html
@@ -849,13 +849,10 @@
             <span class="subheading">About us</span>
             <h2 class="mb-4" style="color: white;">Welcome to SK TRACKS LTD</h2>
 
-            <p>At SK TRACKS LTD, we specialize in providing top-quality private hire vehicles in Manchester and
-              comprehensive property management services. We provide cars for trafford council, Manchester council,
-              wolverhampton council and sefton council with maintenance. Our licensed car rental service ensures
-              reliable and safe transportation, while our property management solutions cater to landlords seeking
-              efficient renting and maintenance of their properties. We are dedicated to delivering exceptional service
-              and value, ensuring peace of mind for our clients. Trust SK TRACKS LTD for your transportation and
-              property management needs.</p>
+            <p>At SK TRACKS LTD, we specialize in providing top-quality private hire vehicles in Manchester.
+We supply licensed cars for Trafford Council, Manchester Council, Wolverhampton Council, and Sefton Council, ensuring safe, reliable, and well-maintained transportation services.
+Our commitment to excellence guarantees peace of mind for our clients.
+Trust SK TRACKS LTD for your private hire vehicle needs.</p>
             <p><a href="contact.html" class="py-2 px-3" id="book-now">More Details</a></p>
           </div>
         </div>
